--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mintbean PhaserJS Template</title>
+    <title>Flappy Bird</title>
 </head>
 
 <body>
-    <h1>Mintbean's PhaserJS template.</h1>
+    <h1>My Flappy Bird Clone</h1>
     <div>
         Move with up, down, left, right.<br/> Space = brake.<br/> Collect all the stars to win.<br/>
     </div>
