Added more text for instructions/gameplay

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flappy Bird</title>
+    <title>Pidgey Escape</title>
 </head>
 
 <body>
-    <h1>My Flappy Bird Clone</h1>
+    <h1>Help Pidgey escape capture!</h1>
     <div>
-        Move with up, down, left, right.<br/> Space = brake.<br/> Collect all the stars to win.<br/>
+       Press Space to fly!<br/> Avoid all pokeballs!<br/>
     </div>
     <script src="./index.js"></script>
 </body>
