--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
        Press Space to fly!<br/> Avoid all pokeballs!<br/>
     </div>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 
 </html>
