Updated Game Text

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Pidgey Escape</title>
 </head>
 
 <body>
-    <h1>Help Pidgey escape capture!</h1>
-    <div>
-       Press Space to fly!<br/> Avoid all pokeballs!<br/>
-    </div>
+    <section class="intro-text">
+        <h1>Pidgey Escape!</h1>
+        <div>
+           Press Space to fly!<br/> Pidgey just wants to go home! Avoid getting caught with a pokeball!<br/>
+        </div>
+    </section>
     <script src="./dist/main.js"></script>
 </body>
 
